--- a/styles/index.css
+++ b/styles/index.css
@@ -19,7 +19,7 @@ header {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-.area-tarefas {
+.area-tarefas{
   max-width: 1000px;
   margin: 30px auto;
   background: white;
@@ -125,6 +125,12 @@ header {
   transition: 0.2s;
 }
 
+.dia.com-tarefa {
+  border-bottom: 3px solid green; /* traço verde indicando tarefa */
+  font-weight: bold;
+  color: #333;
+}
+
 .dia.selected {
   border: 2px solid #17313E;
 }
@@ -137,6 +143,18 @@ header {
 .descricao.concluida {
   text-decoration: line-through;
   color: #666;
+}
+
+.adicionar_tarefasBTN{
+  max-width: 1000px;
+  margin: 30px auto;
+  background: white;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column; 
+  gap: 10px; 
 }
 
 /* Badge de evento (barra embaixo do número) */
